2009-06-26  Eric Ludlam  <zappo@gnu.org>

	* cedet/*: New unit tests, from CEDET repository.

2009-06-26  Chong Yidong  <cyd@stupidchicken.com>

	* redisplay-testsuite.el: New file.

2009-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.1.

2009-01-25  Ulf Jasper  <ulf.jasper@web.de>

	* icalendar-testsuite.el
	(icalendar-testsuite--run-function-tests): Added
	icalendar-testsuite--test-diarytime-to-isotime.
	(icalendar-testsuite--test-parse-summary-and-rest): Adjusted to
	recent icalendar fixes.
	(icalendar-testsuite--test-diarytime-to-isotime): New.
	(icalendar-testsuite--test-create-uid): Adjusted to recent
	icalendar changes.

2008-11-30  Shigeru Fukaya  <shigeru.fukaya@gmail.com>

	* bytecomp-testsuite.el: New file.

2008-10-31  Ulf Jasper  <ulf.jasper@web.de>

	* icalendar-testsuite.el (icalendar-testsuite--run-function-tests):
	Added `icalendar-testsuite--test-create-uid'.
	(icalendar-testsuite--test-create-uid): New.

2008-06-14  Ulf Jasper  <ulf.jasper@web.de>

	* newsticker-testsuite.el: New file.

2008-05-24  Ulf Jasper  <ulf.jasper@web.de>

	* icalendar-testsuite.el (icalendar-testsuite--run-function-tests):
	Add icalendar-testsuite--test-datestring-to-isodate,
	icalendar-testsuite--test-datetime-to-diary-date, and
	icalendar-testsuite--test-calendar-style.
	(icalendar-testsuite--test-format-ical-event):
	(icalendar-testsuite--test-parse-summary-and-rest):
	Doc fix.  Remove european-calendar-style.
	(icalendar-testsuite--get-ical-event): Doc fix.
	(icalendar-testsuite--test-first-weekday-of-year):
	(icalendar-testsuite--run-cycle-tests): Add doc string.
	(icalendar-testsuite--test-datestring-to-isodate):
	(icalendar-testsuite--test-datetime-to-diary-date):
	(icalendar-testsuite--test-calendar-style): New functions.
	(icalendar-testsuite--test-export): Handle iso date style.
	New arg INPUT-ISO.  Use calendar-date-style.
	(icalendar-testsuite--test-import): Handle iso date style.
	New arg EXPECTED-ISO.  Use calendar-date-style.