@@ -1,3 +1,7 @@
+2009-09-30  Glenn Morris  <rgm@gnu.org>
+
+	* cedet/semantic-utest-c.el: Relicense under GPLv3+.
+
 2009-06-26  Eric Ludlam  <zappo@gnu.org>
 
 	* cedet/*: New unit tests, from CEDET repository.
